--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,7 +59,7 @@
     {
       "label": "MASLIVE: Flutter build web (release + Stripe Premium Price IDs)",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && : \"${STRIPE_PREMIUM_MONTHLY_PRICE_ID:?Missing env STRIPE_PREMIUM_MONTHLY_PRICE_ID}\" && : \"${STRIPE_PREMIUM_YEARLY_PRICE_ID:?Missing env STRIPE_PREMIUM_YEARLY_PRICE_ID}\" && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\" --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; else flutter build web --release --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; fi",
+      "command": "cd /workspaces/MASLIVE/app && : \"${STRIPE_PREMIUM_MONTHLY_PRICE_ID:?Missing env STRIPE_PREMIUM_MONTHLY_PRICE_ID}\" && : \"${STRIPE_PREMIUM_YEARLY_PRICE_ID:?Missing env STRIPE_PREMIUM_YEARLY_PRICE_ID}\" && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\" --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; else flutter build web --release --no-wasm-dry-run --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; fi",
       "problemMatcher": [],
       "isBackground": false,
       "presentation": {
@@ -132,7 +132,7 @@
     {
       "label": "MASLIVE: Build Web & Deploy Hosting + Firestore Rules",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release; fi && cd .. && firebase deploy --only hosting,firestore:rules",
+      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting,firestore:rules",
       "problemMatcher": [],
       "isBackground": false,
       "presentation": {
@@ -179,14 +179,14 @@
     {
       "label": "MASLIVE: Build Web & Deploy Hosting",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release; fi && cd .. && firebase deploy --only hosting",
+      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting",
       "problemMatcher": [],
       "isBackground": false
     },
     {
       "label": "MASLIVE: Déployer Hosting (1 clic)",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release; fi && cd .. && firebase deploy --only hosting",
+      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting",
       "problemMatcher": [],
       "isBackground": false,
       "group": {
@@ -197,7 +197,7 @@
     {
       "label": "MASLIVE: Regenerate Splash & Deploy (Deprecated)",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter build web --release && cd .. && firebase deploy --only hosting",
+      "command": "cd /workspaces/MASLIVE/app && flutter build web --release --no-wasm-dry-run && cd .. && firebase deploy --only hosting",
       "problemMatcher": []
     },
     {
