--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,7 +24,7 @@
     {
       "label": "MASLIVE: Build web(no-wasm) + Firebase deploy full",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd /workspaces/MASLIVE && firebase deploy --only hosting,functions,firestore:rules,firestore:indexes",
+      "command": "cd /workspaces/MASLIVE/app && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd /workspaces/MASLIVE && firebase deploy --only hosting,functions,firestore:rules,firestore:indexes",
       "problemMatcher": [],
       "presentation": {
         "reveal": "always",
@@ -59,7 +59,7 @@
     {
       "label": "MASLIVE: Flutter build web (release no-wasm)",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then echo \"Using MAPBOX token from env\"; flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else echo \"No MAPBOX token in env; building without MAPBOX_ACCESS_TOKEN define\"; flutter build web --release --no-wasm-dry-run; fi",
+      "command": "cd /workspaces/MASLIVE/app && flutter pub get && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then echo \"Using MAPBOX token from env\"; flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else echo \"No MAPBOX token in env; building without MAPBOX_ACCESS_TOKEN define\"; flutter build web --release --no-wasm-dry-run; fi",
       "problemMatcher": [],
       "isBackground": false,
       "presentation": {
@@ -71,7 +71,7 @@
     {
       "label": "MASLIVE: Flutter build web (release + Stripe Premium Price IDs)",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && : \"${STRIPE_PREMIUM_MONTHLY_PRICE_ID:?Missing env STRIPE_PREMIUM_MONTHLY_PRICE_ID}\" && : \"${STRIPE_PREMIUM_YEARLY_PRICE_ID:?Missing env STRIPE_PREMIUM_YEARLY_PRICE_ID}\" && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\" --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; else flutter build web --release --no-wasm-dry-run --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; fi",
+      "command": "cd /workspaces/MASLIVE/app && : \"${STRIPE_PREMIUM_MONTHLY_PRICE_ID:?Missing env STRIPE_PREMIUM_MONTHLY_PRICE_ID}\" && : \"${STRIPE_PREMIUM_YEARLY_PRICE_ID:?Missing env STRIPE_PREMIUM_YEARLY_PRICE_ID}\" && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\" --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; else flutter build web --release --no-wasm-dry-run --dart-define=STRIPE_PREMIUM_MONTHLY_PRICE_ID=\"$STRIPE_PREMIUM_MONTHLY_PRICE_ID\" --dart-define=STRIPE_PREMIUM_YEARLY_PRICE_ID=\"$STRIPE_PREMIUM_YEARLY_PRICE_ID\"; fi",
       "problemMatcher": [],
       "isBackground": false,
       "presentation": {
@@ -155,7 +155,7 @@
     {
       "label": "MASLIVE: Build Web & Deploy Hosting + Firestore Rules",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting,firestore:rules",
+      "command": "cd /workspaces/MASLIVE/app && flutter pub get && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting,firestore:rules",
       "problemMatcher": [],
       "isBackground": false,
       "presentation": {
@@ -202,14 +202,14 @@
     {
       "label": "MASLIVE: Build Web & Deploy Hosting",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting",
+      "command": "cd /workspaces/MASLIVE/app && flutter pub get && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting",
       "problemMatcher": [],
       "isBackground": false
     },
     {
       "label": "MASLIVE: Déployer Hosting (1 clic)",
       "type": "shell",
-      "command": "cd /workspaces/MASLIVE/app && flutter pub get && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting",
+      "command": "cd /workspaces/MASLIVE/app && flutter pub get && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting",
       "problemMatcher": [],
       "isBackground": false,
       "group": {
