--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,18 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "MASLIVE: 🚀 Commit + Push + Build + Deploy (rainbow headers shop)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && git add app/lib/pages/storex_shop_page.dart app/lib/pages/checkout/storex_checkout_stripe.dart && git commit -m \"feat(shop): rainbow gradient on all shop headers\" && git push origin main && cd app && { [ -f /workspaces/MASLIVE/.env ] && source /workspaces/MASLIVE/.env; } 2>/dev/null || true && TOKEN=${MAPBOX_ACCESS_TOKEN:-${MAPBOX_PUBLIC_TOKEN:-${MAPBOX_TOKEN:-}}} && if [ -n \"$TOKEN\" ]; then flutter build web --release --no-wasm-dry-run --dart-define=MAPBOX_ACCESS_TOKEN=\"$TOKEN\"; else flutter build web --release --no-wasm-dry-run; fi && cd .. && firebase deploy --only hosting",
+      "problemMatcher": [],
+      "isBackground": false,
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: git rm --cached .env",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && git rm --cached .env 2>/dev/null && git commit -m \"chore(security): untrack .env from git index\" && git push origin main && echo '✅ .env désindexé et poussé' || echo '⚠️  .env déjà absent de l index git (rien à faire)'",
