--- a/app/analysis_options.yaml
+++ b/app/analysis_options.yaml
@@ -2,6 +2,7 @@ include: package:flutter_lints/flutter.yaml
 
 analyzer:
   exclude:
+    - _archive/**
     - tooling/**
     - "lib/_legacy/**"
     - "**/*.old"
