--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,6 +46,17 @@
       }
     },
     {
+      "label": "MASLIVE: Git commit + push (P1 route display: MasLiveMap polyline)",
+      "type": "shell",
+      "command": "cd /workspaces/MASLIVE && git add app/lib/pages/route_display_page.dart .vscode/tasks.json && git commit -m \"chore(web): migrate RouteDisplayPage to MasLiveMap\" && git push origin main",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "always",
+        "panel": "dedicated",
+        "clear": true
+      }
+    },
+    {
       "label": "MASLIVE: Git commit + push (wizard popup nouveau circuit pays+carte+periode)",
       "type": "shell",
       "command": "cd /workspaces/MASLIVE && git add app/lib/admin/circuit_wizard_entry_page.dart && git commit -m \"feat(wizard): popup nouveau circuit (pays+carte+periode)\" && git push origin main",
